--- a/react-frontend/public/index.html
+++ b/react-frontend/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>LMU Meme</title>
   </head>
   <body style="background-color: whitesmoke; min-height: 100vh; min-width: 1450px">
     <noscript>You need to enable JavaScript to run this app.</noscript>
